docs(templates): add Jinja template documentation
- Add descriptive comments to base template
- Document form templates
- Add view template descriptions

--- a/app/templates/edit.html
+++ b/app/templates/edit.html
@@ -1,6 +1,7 @@
 {% extends "base.html" %}
 
 {% block content %}
+{# Template for editing existing QR codes #}
 <div class="row">
     <div class="col-md-6 offset-md-3">
         <div class="card">
