--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,3 +1,4 @@
+{# Home page template displaying QR code generation form and list of existing codes #}
 {% extends "base.html" %}
 
 {% block content %}
