--- a/app/templates/view.html
+++ b/app/templates/view.html
@@ -5,10 +5,23 @@
 <div class="row">
     <div class="col-md-6 offset-md-3">
         <div class="card">
+            <div class="card-header d-flex justify-content-between align-items-center">
+                <h5 class="card-title mb-0">QR Code Details</h5>
+                <div class="btn-group">
+                    <a href="{{ url_for('qr.edit_qr', qr_id=qr_code.id) }}" class="btn btn-primary">
+                        <i class="bi bi-pencil"></i> Edit
+                    </a>
+                    <a href="{{ url_for('qr.index') }}" class="btn btn-secondary">
+                        <i class="bi bi-arrow-left"></i> Back
+                    </a>
+                </div>
+            </div>
             <div class="card-body">
-                <h5 class="card-title">QR Code Details</h5>
                 <div class="text-center mb-4">
-                    <img src="{{ url_for('qr.serve_qr_code', filename=qr_code.filename) }}" alt="QR Code" style="width: 200px;">
+                    <img src="{{ url_for('qr.serve_qr_code', filename=qr_code.filename) }}" 
+                         alt="QR Code for {{ qr_code.description or qr_code.url }}"
+                         title="{{ qr_code.description or qr_code.url }}"
+                         style="width: 200px;">
                 </div>
                 <div class="mb-3">
                     <h6>URL</h6>
@@ -33,6 +46,15 @@
                 </div>
                 {% endif %}
                 <div class="mb-3">
+                    <h6>Colors</h6>
+                    <p>Fill Color: <span style="display: inline-block; width: 20px; height: 20px; background-color: {{ qr_code.fill_color }}; vertical-align: middle;"></span> {{ qr_code.fill_color }}</p>
+                    <p>Background Color: <span style="display: inline-block; width: 20px; height: 20px; background-color: {{ qr_code.back_color }}; vertical-align: middle;"></span> {{ qr_code.back_color }}</p>
+                </div>
+                <div class="mb-3">
+                    <h6>Last Updated</h6>
+                    <p>{{ qr_code.updated_at.strftime('%Y-%m-%d %H:%M') }}</p>
+                </div>
+                <div class="mb-3">
                     <h6>Status</h6>
                     <p>
                         <span class="badge {% if qr_code.is_active %}bg-success{% else %}bg-danger{% endif %}">
@@ -40,8 +62,9 @@
                         </span>
                     </p>
                 </div>
-                <div class="d-grid gap-2">
-                    <a href="{{ url_for('qr.index') }}" class="btn btn-secondary">Back</a>
+                <div class="mb-3">
+                    <h6>Image Details</h6>
+                    <p>Filename: {{ qr_code.filename }}</p>
                 </div>
             </div>
         </div>
